--- a/package.json
+++ b/package.json
@@ -6,17 +6,15 @@
   "scripts": {
     "dev": "NODE_ENV=development webpack-dev-server -w",
     "build": "NODE_ENV=production webpack --config webpack.config.prod.js -p",
-    "serve": "NODE_ENV=production webpack-dev-server --config webpack.config.prod.js"    
+    "serve": "NODE_ENV=production webpack-dev-server --config webpack.config.prod.js"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "babel-polyfill": "6.23.0",
     "bootstrap": "4.0.0-beta",
-    "firebase": "^4.4.0",
     "font-awesome": "4.7.0",
     "isomorphic-fetch": "2.2.1",
-    "jquery": "3.2.1",
     "react": "15.6.1",
     "react-dom": "15.6.1",
     "react-quill": "1.1.0",
@@ -44,7 +42,7 @@
     "redux-logger": "3.0.1",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
-    "webpack": "2.2.1",
-    "webpack-dev-server": "2.4.0"
+    "webpack": "^4.38.0",
+    "webpack-cli": "^3.3.6"
   }
 }
