--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,7 @@
 {
     "presets": [
-      "es2015",
-      "react",
-      "stage-2",
-      ["env", {
-        "targets": {
-          "browsers": ["last 2 versions", "safari >= 7"]
-        },
-        "modules": false
-      }]
+      "@babel/preset-env",
+      "@babel/react"
     ]
   }
   
