--- a/package.json
+++ b/package.json
@@ -1,47 +1,47 @@
 {
-  "name": "website-redux",
-  "version": "1.0.0",
+  "name": "website",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --mode development --colors",
+    "start": "webpack-dev-server --mode development",
     "build": "webpack --mode production --colors"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "babel-polyfill": "6.23.0",
-    "bootstrap": "4.0.0-beta",
-    "font-awesome": "4.7.0",
-    "isomorphic-fetch": "2.2.1",
-    "react": "15.6.1",
-    "react-dom": "15.6.1",
-    "react-quill": "1.1.0",
-    "react-redux": "^5.0.6",
-    "react-router": "3.0.2",
-    "react-router-redux": "4.0.8",
-    "redux": "^3.7.2",
-    "redux-devtools-extension": "2.13.0",
-    "redux-thunk": "^2.2.0",
-    "uuid": "3.1.0"
+    "@fortawesome/fontawesome-free": "^5.10.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.21",
+    "@fortawesome/free-solid-svg-icons": "^5.10.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "@material-ui/core": "^4.3.2",
+    "@material-ui/icons": "^4.2.1",
+    "babel-polyfill": "^6.26.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-router-dom": "^5.2.0",
+    "source-map-loader": "^1.1.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "babel-core": "6.24.1",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "1.4.0",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-stage-2": "6.24.1",
-    "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "2.1.0",
-    "file-loader": "^1.1.4",
-    "html-webpack-plugin": "^2.30.1",
-    "image-webpack-loader": "3.1.0",
-    "popper.js": "1.12.3",
-    "redux-logger": "3.0.1",
-    "style-loader": "^0.18.2",
-    "url-loader": "^0.5.9",
-    "webpack": "^4.38.0",
-    "webpack-cli": "^3.3.6"
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.2.0",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^18.0.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.14.3",
+    "file-loader": "^4.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "prettier": "^1.18.2",
+    "style-loader": "^1.0.0",
+    "webpack": "^4.39.1",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.8.0"
   }
 }
